--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,11 @@ services:
     name: skin-disease-prediction-api
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --bind 0.0.0.0:$PORT main:app
+    startCommand: gunicorn main:app -c gunicorn.conf.py
     envVars:
       - key: PYTHON_VERSION
         value: "3.11.0"
       - key: TF_ENABLE_ONEDNN_OPTS
         value: "0"
+      - key: PORT
+        value: "8000"
